# termodoro

./: .envrc  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  go.mod  go.sum  install.sh  main.go  rebase  rebase.sh
.github/workflows/: build.yml  cd.yml  fmt.yml  format.yml  release.yml  test.yml
_archive/: cmds_sync.rs
cmd/: root.go
cmd/converter/: main.go
cmd/help/: help.go
cmd/root/: root.go
cmd/termodoro/: main.go
cmd/version/: version.go
commands/help/: help.go
commands/root/: root.go
commands/version2/: version.go
config/: config.go
docs/: explain-index-page.txt  issues.md  widget-pattern.md
internal/app/: app.go  keys.go  utils.go
internal/cache/: cache.go
internal/config/: config.go
internal/session/: session.go
internal/timer/: timer.go
internal/tui/: app.go  session.go  timer.go  tui.go  view.go
internal/ui/: instruction.go  session.go  timer.go  view.go
internal/utils/: disk.go
linux/: archlinux.sh  install.sh  termodoro.desktop
local/: config.toml
models/: app.go  session.go  timer.go
pkg/cache/: cache.go
pkg/commands/: commands.go
pkg/config/: config.go
pkg/disk/: disk.go
pkg/enums/: enums.go
pkg/utils/: disk.go  notify.go
src/: app.rs  cli.rs  config.rs  db.rs  errors.rs  event.rs  lib.rs  logger.rs  main.rs  state.rs  timer.rs  tui.rs  ui.rs  version.rs
src-0/: db.rs  timer.rs
src-0/ui/: app.rs  hints.rs  phase_label.rs  sessions.rs  timer_display.rs
src-1/: lib.rs  main.rs
src-1/components/: home.rs  mod.rs
src/caches/: mod.rs  timer.rs  timer_cache.rs  todos.rs
src/cmd/: help.rs  mod.rs  sync.rs  tui.rs  version.rs
src/cmds/: help.rs  mod.rs  seed.rs  sync.rs  tui.rs  version.rs
src/commands/: help.rs  mod.rs  sync.rs  tui.rs  version.rs
src/components/: fps.rs  home.rs  (+1 more)
systemd/: orivo-sync.service  orivo-sync.timer
tests/: log.rs  logger.rs
view/: instruction.go  session.go  timer.go  view.go
xdg/: orivo-alacritty.desktop  orivo-kitty.desktop
(+160 files in other folders)
