[package]
name = "orivo"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { version = "0.30.0", features = ["widget-calendar"] }
tui-big-text = "0.8.2"
time = { version = "0.3", features = ["local-offset"] }
ratatui-textarea = "0.8.0"
libsql = { version = "0.6", features = ["replication"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
