[package]
name = "orivo"
version = "0.1.0"
edition = "2024"

[dependencies]
time = { version = "0.3", features = ["local-offset"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
ratatui = { version = "0.30.0", features = ["widget-calendar"] }
tui-big-text = "0.8.2"
ratatui-textarea = "0.8.0"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
sea-orm = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
sea-orm-migration = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }

