[package]
name = "orivo"
version = "0.2.0"
edition = "2024"
description = "A terminal-based Todos + Pomodoro timer written in Rust"
license = "MIT"
repository = "https://github.com/mt-shihab26/orivo"
readme = "README.md"
keywords = ["tui", "pomodoro", "todo", "terminal", "productivity"]
categories = ["command-line-utilities"]

[dependencies]
time = { version = "0.3", features = ["local-offset"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
ratatui = { version = "0.30.0", features = ["widget-calendar"] }
tui-big-text = "0.8.2"
ratatui-textarea = "0.8.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.8"
log = "0.4"
sea-orm = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
sea-orm-migration = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
notify-rust = "4.12.0"
